# claude-ds

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/: banner.html
examples/: claude-md-additions.md  mcp.json  settings-additions.json
scripts/: claude-ds.sh  vision-guard.sh
vision-mcp/: pyproject.toml
vision-mcp/clipboard_vision_mcp/: __init__.py  clipboard.py  server.py
vision-mcp/tests/: test_validation.py
